--- a/src/main/webapp/openstack-meeting-analytics.html
+++ b/src/main/webapp/openstack-meeting-analytics.html
@@ -37,7 +37,7 @@ xmlhttp.send();
 }
 function myFunction()
 {
-loadXMLDoc("http://assignment6/solum/meetings",function()
+loadXMLDoc("https://assignment6/solum/meetings",function()
   {
   if (xmlhttp.readyState==4 && xmlhttp.status==200)
     {
